 - Support string conversions for `std::chrono::year_month_day`. (#492)
 - Helper for implementing string traits: `generic_to_buf`.
 - Support `result::at(row_num, col_num)`.
 - Support `result[row_num, col_num]` if the compiler allows it.
 - Work around broken `std::filesystem::path` in MinGW.  (#498)
 - Fix leak when getting client encoding fails.  (#500)
7.6.0
 - Removed bad string conversion to `std::basic_string_view<std::byte>`. (#463)
 - Add C++20 concepts: `binary`, `char_string`, `char_strings`.
 - Generalise binary strings to any contiguous range of `std::byte`.
 - Mark `zview` as a view and as a borrowed range.
 - Save a copy step on string fields in `stream_to`.
 - New helper: `pqxx::value_type<CONTAINER>`.
 - New helper: `pqxx::binary_cast`. (#450)
 - Some escaping functions now have "into my buffer" variants.
 - More generic escaping functions, supporting more types of binary.
 - In C++20, accept generic columns list for `stream_to`.  (#447)
 - Renamed `<pqxx/prepared_statement>` to `<pqxx/params>`.
 - Deprecated `dynamic_params` in favour of `params`.
 - `pqxx::params::append_multi()` now calls `reserve()` if possible.
 - `pqxx::params::size()` is now `noexcept` (but sadly, `ssize()` is not).
 - Helper for generating parameter placeholders `$1`, `$2`, etc.  (#443)
 - Now requires support for C++14 `[[deprecated]]` attribute.
 - Deprecated `unesc_raw()` with `unesc_bin()` variants.
 - Once `unesc_raw()` is gone, we'll support only the hex escape format.
 - Work around broken `thread_local` in MinGW gcc < 11.1.
 - `pqxx::blob` now supports `std::filesystem::path`.
 - Fixed check against header/lib version mismatch: `check_pqxx_version_7_6`
 - Deprecated result slicing.  Expect `row::slice()` to disappear.
 - More complete documentation, of cursors in particular.
7.5.2
 - **Actual serious bug.**  `blob::read(std::vector<...>)` was broken.
7.5.1
 - Fixed some Visual Studio warnings.
 - Missed a bit in working around MinGW's broken `<thread>`.