@@ -6,6 +6,7 @@ PACKAGE_TARNAME	internal	autotools
 PACKAGE_VERSION	internal	autotools
 PQXX_HAVE_CHARCONV_INT	internal	compiler
 PQXX_HAVE_CHARCONV_FLOAT	internal	compiler
+PQXX_HAVE_CMP	public	compiler
 PQXX_HAVE_CONCEPTS	public	compiler
 PQXX_HAVE_CXA_DEMANGLE	internal	compiler
 PQXX_HAVE_GCC_PURE	public	compiler
